# nfxh01

./: .cursorignore  .env.example  .gitignore  AGENTS.md  ENABLE_CASCADE_FORECASTER.md  PHASE_3_EFFICIENCY_BRIEF.md  PHASE_3_EXECUTION_CHECKLIST.md  PHASE_3_GROUNDWORK_SUMMARY.md  PHASE_3_ROADMAP.md  PHASE_3_START_HERE.md  PHASE_3_VISUAL_SUMMARY.txt  SPRINT_CONTEXT.md  SYSTEM_CONTEXT.md  config.yaml  conftest.py  pyproject.toml  pytest.ini
config/: btc_context.yaml  btc_context_policy.yaml  btc_strategy.yaml
docs/: DATABASE_RETRO_EMBED.md  config-intelligence-runbook.md  nxfh01-preflight-checklist.md  nxfh01-production-rollout.md
scripts/: DEGEN_CLOSE_POSITIONS.md  append_hl_meta_archive.py  attribution_backfill.py  bootstrap_strategy_memory.py  degen_close_positions.ps1  degen_close_positions.sh  evaluate_change.py  exit_sim.py  ingest_l2.py  log_summarize_ranging.py  query_strategy_memory.py  retro_now.py  run_shadow_mode.py  verify_nxfh01_production.py
services/acp-buyer/: package-lock.json  package.json
src/: main.py
src/acp/: degen_claw.py
src/adapters/: provider_router.py
src/agents/: enrichment.py  exit_decision.py  nansen_intelligence.py  pair_watcher.py  position_sentinel.py
src/calibration/: opportunity_outcomes.py  schema.py  score_calibrator.py
src/config_intelligence/: __init__.py  analytics.py  bundles.py  diff.py  hashing.py  holder.py  normalize.py  registry.py  stamping.py
src/control/: task_logic.py  task_state.py  task_tracker.py
src/dashboard/: __init__.py  __main__.py  http_server.py  snapshot.py
src/data_ingestion/: __init__.py
src/db/: decision_journal.py  schema.sql
src/domain/: pair.py  position.py  risk.py  wallet.py
tests/: test_adaptive_entry_policy.py  test_analysis_parse.py  test_append_hl_meta_archive.py  test_btc_lane_limits.py  test_btc_lanes_engine.py  test_btc_market_context.py  test_btc_regime_detector.py  test_btc_risk_overlay.py  test_btc_strategy_supervisor.py  test_cascade_forecaster.py  test_config_intelligence_diff.py  test_config_intelligence_holder.py  test_config_intelligence_normalize.py  test_config_reload.py  test_config_validation.py  test_dashboard_snapshot.py  test_decision_journal.py  test_decision_journal_fee.py  test_decision_journal_peak_r.py  test_degen_claw_job_id.py  test_degen_claw_sdk.py  test_edge_cases.py  test_effective_leverage_caps.py  test_effective_min_submit_score.py  test_effective_risk_params.py  test_exit_policy_config.py  test_exits_peak_r.py  test_fathom_advisory.py  test_fathom_mult_apply.py  test_fathom_retrospective.py  test_fee_estimation.py  test_funding_context.py  test_growi_mc_engines.py  test_historical_ranker_dataset.py  test_hl_meta_snapshot.py  test_hl_rate_limited_info.py  test_hyperliquid_l2_parse.py  test_intelligence_rollback.py  test_intelligence_topk_review.py  test_intelligence_weekly_summary.py  (+30 more)
(+240 files in other folders)
