[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nxfh01"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pandas",
    "numpy",
    "httpx",
    "python-dotenv",
    "supabase",
    "asyncpg",
    "pyyaml",
    "ruamel.yaml>=0.18",
    "redis>=5.0",
    "hyperliquid-python-sdk>=0.22",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio>=0.24"]

[project.scripts]
nxfh01 = "nxfh01.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: marks tests that call real Hyperliquid mainnet API (run deliberately)",
    "asyncio: async tests (pytest-asyncio; optional explicit mark)",
]
