[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nxfh01"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pandas",
    "numpy",
    "httpx",
    "python-dotenv",
    "supabase",
    "asyncpg",
    "pyyaml",
    "ruamel.yaml>=0.18",
    "redis>=5.0",
    "hyperliquid-python-sdk>=0.22",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio>=0.24"]
ingest = ["boto3>=1.34", "lz4>=4.3", "pyarrow>=15"]
# LangChain PGVector + Ollama embeddings (strategy RAG); not required for core trading.
strategy_memory = [
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    # LangChain PGVector imports pgvector.sqlalchemy (separate from the Postgres extension).
    "pgvector>=0.2.5",
]

[project.scripts]
nxfh01 = "nxfh01.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: marks tests that call real Hyperliquid mainnet API (run deliberately)",
    "asyncio: async tests (pytest-asyncio; optional explicit mark)",
]
